--- a/main.ipynb
+++ b/main.ipynb
@@ -1988,6 +1988,64 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dim = 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/dist-packages/keras/src/layers/core/embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential([\n",
+    "    Embedding(input_dim=max_words, output_dim=embedding_dim, input_length=max_len),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    Dropout(0.3),\n",
+    "    LSTM(32),\n",
+    "    Dropout(0.3),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1, activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    loss='binary_crossentropy',\n",
+    "    optimizer='adam',\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
