--- a/main.ipynb
+++ b/main.ipynb
@@ -2046,6 +2046,48 @@
     "    metrics=['accuracy']\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m129s\u001b[0m 21ms/step - accuracy: 0.8001 - loss: 0.3953 - val_accuracy: 0.9379 - val_loss: 0.1630\n",
+      "Epoch 2/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m127s\u001b[0m 19ms/step - accuracy: 0.9454 - loss: 0.1505 - val_accuracy: 0.9461 - val_loss: 0.1434\n",
+      "Epoch 3/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m151s\u001b[0m 21ms/step - accuracy: 0.9554 - loss: 0.1208 - val_accuracy: 0.9458 - val_loss: 0.1448\n",
+      "Epoch 4/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m142s\u001b[0m 21ms/step - accuracy: 0.9643 - loss: 0.0975 - val_accuracy: 0.9429 - val_loss: 0.1538\n",
+      "Epoch 5/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m135s\u001b[0m 19ms/step - accuracy: 0.9715 - loss: 0.0777 - val_accuracy: 0.9423 - val_loss: 0.1822\n",
+      "Epoch 6/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m116s\u001b[0m 20ms/step - accuracy: 0.9777 - loss: 0.0619 - val_accuracy: 0.9387 - val_loss: 0.1871\n",
+      "Epoch 7/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 19ms/step - accuracy: 0.9828 - loss: 0.0484 - val_accuracy: 0.9394 - val_loss: 0.1979\n",
+      "Epoch 8/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m122s\u001b[0m 21ms/step - accuracy: 0.9861 - loss: 0.0385 - val_accuracy: 0.9387 - val_loss: 0.2264\n",
+      "Epoch 9/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m142s\u001b[0m 21ms/step - accuracy: 0.9883 - loss: 0.0325 - val_accuracy: 0.9339 - val_loss: 0.2470\n",
+      "Epoch 10/10\n",
+      "\u001b[1m5830/5830\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m143s\u001b[0m 21ms/step - accuracy: 0.9908 - loss: 0.0273 - val_accuracy: 0.9330 - val_loss: 0.2837\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    X_train, y_train,\n",
+    "    validation_data=(X_test, y_test),\n",
+    "    epochs=10,\n",
+    "    batch_size=32,\n",
+    "    verbose=1\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
