evaluating the model

--- a/main.ipynb
+++ b/main.ipynb
@@ -2088,6 +2088,69 @@
     "    verbose=1\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1458/1458\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 8ms/step - accuracy: 0.9338 - loss: 0.2813\n",
+      "Test accuracy: 93.3040 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f\"Test accuracy: {(accuracy * 100):.4f} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1458/1458\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = (model.predict(X_test) > 0.5).astype(\"int32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.92      0.93     23433\n",
+      "           1       0.92      0.95      0.93     23207\n",
+      "\n",
+      "    accuracy                           0.93     46640\n",
+      "   macro avg       0.93      0.93      0.93     46640\n",
+      "weighted avg       0.93      0.93      0.93     46640\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
