--- a/main.ipynb
+++ b/main.ipynb
@@ -2176,6 +2176,28 @@
     "model.save(\"suicide_detection_lstm.h5\")\n",
     "print(\"Model saved successfully...\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizer saved successfully...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"tokenizer.pkl\", \"wb\") as f:\n",
+    "  pickle.dump(tokenizer, f)\n",
+    "\n",
+    "print(\"Tokenizer saved successfully...\")"
+   ]
   }
  ],
  "metadata": {
